[package]
name = "mirage-async-codegen"
version = "0.1.0"
authors = ["Evgeny Rozaliev <rozaliev@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
quote = { git = "https://github.com/dtolnay/quote" }


[dependencies.syn]
git = 'https://github.com/dtolnay/syn'
rev = "d5e985994ca58039ea22d6fde8acb821d9058f2f"
features = ["full", "fold", "parsing", "printing", "extra-traits", "clone-impls"]
default-features = false

