[package]
name = "mirage-async-codegen"
version = "0.1.0"
authors = ["Evgeny Rozaliev <rozaliev@gmail.com>"]

[lib]
proc-macro = true
[dependencies]
quote = "0.4.2"

[dependencies.syn]
version = "0.12.10"
features = ["full", "fold", "parsing", "printing", "extra-traits", "clone-impls"]
default-features = false
